<resources>
    <string name="app_name">Suto</string>
    <string name="user_name_hint">Username</string>
    <string name="host_name_hint">Hostname</string>
    <string name="password_hint">Password</string>
    <string name="dialog_title">Add a host</string>
    <string name="dialog_add">Add</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="host_deleted">Host deleted</string>
    <string name="undo_delete_item">Undo</string>
    <string name="host_list_empty">No hosts added</string>
    <string name="host_already_present">Host already present. Add another host</string>
    <string name="suto_pam_auth">Suto PAM Authenticator</string>
    <string name="bkg_service">Background Service</string>

    <string name="foreground_notification_msg">Listening for authentication requests</string>
    <string name="authentication_notif_title">New authentication request</string>
    <string name="authentication_notif_auth">Authenticate</string>
    <string name="authentication_notif_cancel">Cancel</string>
</resources>